--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Doggy Tree</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.2/lib/p5.js"></script>
     <script src="js/branch.js" defer></script>
-    <script src="js/main.js" defer></script>
+    <script src="tests/testTree.js" defer></script>
 </head>
 <body>
 
