--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>My Doggy Tree</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.2/lib/p5.js"></script>
+    <script src="js/base.js" defer></script>
     <script src="js/branch.js" defer></script>
+    <script src="js/fireflies.js" defer></script>
     <script src="tests/testTree.js" defer></script>
 </head>
+
 <body>
 
 </body>
+
 </html>
