tree can now grow on different canvas

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <title>My Doggy Tree</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.2/lib/p5.js"></script>
-    <script src="js/base.js"></script>
-
+    <script src="js/base.js" defer></script>
+    <script src="js/branch.js" defer></script>
     <!--<script src="js/fireflies.js" defer></script>-->
-    <script src="tests/testP5Object.js"></script>
+    <script src="tests/testTree.js"></script>
 </head>
 
 <body>
