p5.js seems to not work with http-server

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="js/base.js" defer></script>
     <script src="js/branch.js" defer></script>
     <!--<script src="js/fireflies.js" defer></script>-->
-    <script src="tests/testTree.js"></script>
+    <script src="main.js"></script>
 </head>
 
 <body>
