--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.2/lib/p5.js"></script>
     <script src="js/base.js" defer></script>
     <script src="js/branch.js" defer></script>
+    <script src="js/fireflies.js" defer></script>
     <!--<script src="js/fireflies.js" defer></script>-->
-    <script src="tests/testTree.js"></script>
+    <script src="main.js" defer></script>
 </head>
 
 <body>
