--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>My Doggy Tree</title>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.2/lib/p5.js"></script>
+    <title>DogeTree</title>
+    <script src="js/p5.min.js"></script>
     <script src="js/base.js" defer></script>
     <script src="js/branch.js" defer></script>
     <script src="js/fireflies.js" defer></script>
-    <!--<script src="js/fireflies.js" defer></script>-->
     <script src="main.js" defer></script>
 </head>
 
