better looking tree

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <title>DogeTree</title>
     <script src="js/p5.min.js"></script>
-    <script src="js/base.js" defer></script>
-    <script src="js/branch.js" defer></script>
-    <script src="js/fireflies.js" defer></script>
-    <script src="main.js" defer></script>
+    <script src="js/base.js"></script>
+    <script src="js/branch.js"></script>
+    <script src="js/fireflies.js"></script>
+    <script src="main.js"></script>
 </head>
 
 <body>
