changed dir structures

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>DogeTree</title>
-    <script src="js/p5.min.js"></script>
-    <script src="js/base.js"></script>
-    <script src="js/branch.js"></script>
-    <script src="js/fireflies.js"></script>
+    <script src="p5.min.js"></script>
+    <script src="base.js"></script>
+    <script src="branch.js"></script>
+    <script src="fireflies.js"></script>
     <script src="main.js"></script>
 </head>
 
